Name:                alphaheavy-time
Version:             0.1
License:             AllRightsReserved
Build-type:          Simple
Cabal-version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Exposed-modules:   AlphaHeavy.Time
  Other-modules:     AlphaHeavy.Time.TM
  Build-depends:     base,
                     attoparsec >= 0.8,
                     bindings-DSL >= 1.0.11,
                     convertible >= 1.0.10,
                     deepseq,
                     fclabels >= 1.0,
                     mtl >= 2.0,
                     QuickCheck >= 2.4,
                     text >= 0.11,
                     time >= 1.1 && < 1.5,
                     timezone-olson >= 0.1,
                     timezone-series >= 0.1
  Build-tools:       hsc2hs
  GHC-Options:       -Wall -auto-all

