Name:                alphaheavy-time
Version:             0.1
License:             AllRightsReserved
Build-type:          Simple
Cabal-version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Exposed-modules:   AlphaHeavy.Time.Parser,
                     AlphaHeavy.Time.Json,
                     AlphaHeavy.Time.Calendar,
                     AlphaHeavy.Time.Calendar.ISO8601,
                     AlphaHeavy.Time.Calendar.Types,
                     AlphaHeavy.Time.Native,
                     AlphaHeavy.Time.Types,
                     AlphaHeavy.Time.Zones,
                     AlphaHeavy.Time
  Other-modules:     AlphaHeavy.Time.TM
  Build-depends:     base,
                     aeson,
                     ghc-prim,
                     attoparsec >= 0.8,
                     bindings-DSL >= 1.0.11,
                     containers,
                     convertible >= 1.0.10,
                     deepseq,
                     lens,
                     mtl >= 2.0,
                     tagged,
                     text >= 0.11,
                     time >= 1.1 && < 1.5,
                     timezone-olson >= 0.1,
                     timezone-series >= 0.1
  Build-tools:       hsc2hs
  GHC-Options:       -Wall -auto-all

test-suite time-cube-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 3      && < 5,
    ghc-prim,
    lens,
    alphaheavy-time,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2.6,
    test-framework-quickcheck2 >= 0.2.10,
    HUnit                      >= 1.2.2.3,
    QuickCheck                 >= 2.4.0.1
