Name:                time-cube
Version:             0.1
License:             BSD3
License-File:        LICENSE
Build-type:          Simple
Cabal-version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Exposed-modules:   Data.Time.Cube
  Other-modules:     Data.Time.Cube.Lens
                     Data.Time.Cube.Types
                     Data.Time.Cube.TM
                     Data.Time.Cube.UnixTime
  Build-depends:     base         >= 4.5    && < 5,
                     bindings-DSL >= 1.0.11 && < 1.1,
                     convertible  == 1.0.*,
                     deepseq      == 1.3.*,
                     fclabels     >= 1.0,
                     mtl          == 2.*,
                     time         >= 1.4 && < 2
                     -- timezone-olson >= 0.1,
                     -- timezone-series >= 0.1
  Build-tools:       hsc2hs
  GHC-Options:       -Wall -auto-all

