Name:                time-cube-fclabels
Version:             0.1
License:             BSD3
License-File:        LICENSE
Build-type:          Simple
Cabal-version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Exposed-modules:   Data.Time.Cube.Label
  Build-depends:     base         >= 4.5    && < 5,
                     fclabels     >= 1.0,
                     mtl          == 2.*,
                     time-cube    == 0.1.*
  GHC-Options:       -Wall -auto-all

